--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -69,7 +69,7 @@
 
                 <!-- Tombol untuk membuka modal profil (visible when logged in) -->
                 <button id="auth-button-profile"
-                    class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300"
+                    class="bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600 transition duration-300"
                     style="display: none;">Profil Saya</button>
 
                 <!-- Tombol Logout (visible when logged in) -->
@@ -218,7 +218,7 @@
                         class="font-semibold text-gray-900"></span></p>
 
                 <button id="edit-profile-btn"
-                    class="w-full bg-blue-500 text-white p-3 rounded-md font-semibold hover:bg-blue-600 transition duration-300 mt-4">Edit
+                    class="w-full bg-green-500 text-white p-3 rounded-md font-semibold hover:bg-green-600 transition duration-300 mt-4">Edit
                     Profil</button>
                 <button id="change-password-btn"
                     class="w-full bg-yellow-500 text-white p-3 rounded-md font-semibold hover:bg-yellow-600 transition duration-300">Ubah
