Add 'Reset Password' link to login error message

--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -139,6 +139,13 @@
                     class="bg-green-500 text-white p-3 rounded-md font-semibold hover:bg-green-600 transition duration-300">Login</button>
             </form>
             <p id="auth-message" class="text-red-500 text-sm mt-4 text-center"></p>
+
+            <!-- Link Reset Password (ditambahkan di sini) -->
+            <p id="reset-password-link-container" class="text-center mt-2 text-gray-600 text-sm" style="display: none;">
+                <span id="reset-password-link" class="text-green-500 font-semibold cursor-pointer hover:underline">Lupa
+                    password? Reset di sini</span>
+            </p>
+
             <p class="text-center mt-4 text-gray-600 text-sm">Belum punya akun? <span id="switch-to-register"
                     class="text-green-500 font-semibold cursor-pointer hover:underline">Daftar di sini</span></p>
 
