--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <!-- Ikon Navigasi (Keranjang, Notifikasi) dan Tombol Auth/Profil -->
+            <!-- Ikon Navigasi (Keranjang, Notifikasi) dan Kontainer Tombol Auth/Profil -->
             <div class="flex items-center space-x-6">
                 <a href="#" class="text-gray-600 hover:text-green-600 relative">
                     <!-- Ikon keranjang belanja -->
@@ -62,20 +62,23 @@
                     </svg>
                 </a>
 
-                <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
-                <button id="auth-button-login"
-                    class="bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600 transition duration-300">Login
-                    / Daftar</button>
+                <!-- Kontainer untuk tombol Auth/Profil/Logout untuk menghindari flicker -->
+                <div id="auth-buttons-container" style="opacity: 0; transition: opacity 0.3s ease;">
+                    <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
+                    <button id="auth-button-login"
+                        class="bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600 transition duration-300">Login
+                        / Daftar</button>
 
-                <!-- Tombol untuk membuka modal profil (visible when logged in) -->
-                <button id="auth-button-profile"
-                    class="bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600 transition duration-300"
-                    style="display: none;">Profil Saya</button>
+                    <!-- Tombol untuk membuka modal profil (visible when logged in) -->
+                    <button id="auth-button-profile"
+                        class="bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-green-600 transition duration-300"
+                        style="display: none;">Profil Saya</button>
 
-                <!-- Tombol Logout (visible when logged in) -->
-                <button id="auth-button-logout"
-                    class="bg-red-500 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition duration-300"
-                    style="display: none;">Logout</button>
+                    <!-- Tombol Logout (visible when logged in) -->
+                    <button id="auth-button-logout"
+                        class="bg-red-500 text-white py-2 px-4 rounded-lg hover:bg-red-600 transition duration-300"
+                        style="display: none;">Logout</button>
+                </div>
             </div>
         </div>
     </header>
@@ -140,7 +143,7 @@
             </form>
             <p id="auth-message" class="text-red-500 text-sm mt-4 text-center"></p>
 
-            <!-- Link Reset Password (ditambahkan di sini) -->
+            <!-- Link Reset Password -->
             <p id="reset-password-link-container" class="text-center mt-2 text-gray-600 text-sm" style="display: none;">
                 <span id="reset-password-link" class="text-green-500 font-semibold cursor-pointer hover:underline">Lupa
                     password? Reset di sini</span>
