Fix: Auto-login after registration and ensure toko-online.js exists

--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -308,6 +308,7 @@
 
 
     <!-- Memuat file JavaScript kustom Anda di akhir body untuk performa yang lebih baik -->
+    <script type="module" src="../js/toko-online.js"></script>
     <script type="module" src="../js/auth.js"></script>
     <!-- Anda mungkin perlu file JS lain jika ada, seperti toko-online.js -->
     <!-- <script src="../js/toko-online.js"></script> -->
