--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -71,8 +71,12 @@
 
                     <!-- Tombol untuk membuka modal profil (visible when logged in) -->
                     <button id="auth-button-profile"
-                        class="bg-green-500 text-white py-2 px-3 rounded-lg hover:bg-green-600 transition duration-300 text-sm sm:text-base"
-                        style="display: none;">Profil Saya</button>
+                        class="bg-green-500 text-white py-2 px-3 rounded-lg hover:bg-green-600 transition duration-300 text-sm sm:text-base flex items-center gap-2"
+                        style="display: none;">
+                        <img id="header-profile-photo" src="https://placehold.co/24x24/CCCCCC/000000?text=P"
+                            alt="Foto Profil" class="w-6 h-6 rounded-full object-cover">
+                        <span class="hidden sm:inline">Profil Saya</span> <!-- Sembunyikan teks di mobile kecil -->
+                    </button>
 
                     <!-- Tombol Logout (visible when logged in) -->
                     <button id="auth-button-logout"
