--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -63,19 +63,20 @@
                 </a>
 
                 <!-- Auth Buttons Container -->
-                <div id="auth-buttons-container" style="opacity: 0; transition: opacity 0.3s ease;">
+                <div id="auth-buttons-container" class="flex items-center space-x-2"
+                    style="opacity: 0; transition: opacity 0.3s ease;">
                     <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
                     <button id="auth-button-login"
                         class="bg-green-500 text-white py-2 px-3 rounded-lg hover:bg-green-600 transition duration-300 text-sm sm:text-base">Login
                         / Daftar</button>
 
                     <!-- Tombol untuk membuka modal profil (visible when logged in) -->
+                    <!-- Hanya menampilkan gambar profil -->
                     <button id="auth-button-profile"
-                        class="bg-green-500 text-white py-2 px-3 rounded-lg hover:bg-green-600 transition duration-300 text-sm sm:text-base flex items-center gap-2"
+                        class="bg-green-500 p-1 rounded-full hover:bg-green-600 transition duration-300 flex items-center justify-center"
                         style="display: none;">
-                        <img id="header-profile-photo" src="https://placehold.co/24x24/CCCCCC/000000?text=P"
-                            alt="Foto Profil" class="w-6 h-6 rounded-full object-cover">
-                        <span class="hidden sm:inline">Profil Saya</span> <!-- Sembunyikan teks di mobile kecil -->
+                        <img id="header-profile-photo" src="https://placehold.co/32x32/CCCCCC/000000?text=P"
+                            alt="Foto Profil" class="w-8 h-8 rounded-full object-cover">
                     </button>
 
                     <!-- Tombol Logout (visible when logged in) -->
