Change logo text from 'Tokpedia' to 'Toko Online'

--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -41,7 +41,8 @@
     <!-- Bagian Daftar Produk Toko Online (sekarang menjadi konten utama) -->
     <section id="toko-products" class="toko-products-section animate-on-scroll">
         <div class="container">
-            <h1 class="fade-in-slide-up">Produk Terbaru</h1>
+            <!-- Mengganti logo dari "Tokpedia" menjadi "Toko Online" -->
+            <h1 class="fade-in-slide-up text-3xl font-bold mb-4">Toko Online</h1>
             <p class="fade-in-slide-up product-intro">
                 Temukan berbagai produk unggulan kami di sini. Klik untuk melihat detail atau langsung beli!
             </p>
