--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -19,21 +19,17 @@
                 </a>
             </div>
             <nav class="main-nav">
-                <!-- Kontainer untuk tombol-tombol autentikasi -->
-                <!-- Awalnya disembunyikan (opacity: 0) dan akan ditampilkan oleh JS setelah Auth state diketahui -->
-                <div id="auth-buttons-container" style="opacity: 0; transition: opacity 0.3s ease;">
-                    <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
-                    <button id="auth-button-login" class="btn-auth">Login / Daftar</button>
+                <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
+                <button id="auth-button-login" class="btn-auth">Login / Daftar</button>
 
-                    <!-- Tombol untuk membuka modal profil (visible when logged in) -->
-                    <!-- Gunakan flexbox untuk menampung gambar -->
-                    <button id="auth-button-profile" class="btn-auth profile-btn" style="display: none;">
-                        <img id="header-profile-photo" src="https://placehold.co/32x32/CCCCCC/000000?text=P"
-                            alt="Profil" class="profile-icon">
-                    </button>
-                    <!-- Tombol Logout (visible when logged in) -->
-                    <button id="auth-button-logout" class="btn-auth btn-logout" style="display: none;">Logout</button>
-                </div>
+                <!-- Tombol untuk membuka modal profil (visible when logged in) -->
+                <!-- Gunakan flexbox untuk menampung gambar -->
+                <button id="auth-button-profile" class="btn-auth profile-btn" style="display: none;">
+                    <img id="header-profile-photo" src="https://placehold.co/32x32/CCCCCC/000000?text=P" alt="Profil"
+                        class="profile-icon">
+                </button>
+                <!-- Tombol Logout (visible when logged in) -->
+                <button id="auth-button-logout" class="btn-auth btn-logout" style="display: none;">Logout</button>
             </nav>
         </div>
     </header>
@@ -251,3 +247,417 @@
 </body>
 
 </html>
+```
+Berikut adalah kode CSS yang telah saya revisi:
+
+
+```css
+/* Gaya Dasar (Variabel konsisten dengan beranda.css) */
+:root {
+--primary-color: #007bff;
+--secondary-color: #0056b3;
+--accent-color: #00fbff;
+--text-dark: #333;
+--text-light: #ffffff;
+--bg-light: #f4f7f6;
+--bg-white: #fff;
+--font-main: 'Poppins', sans-serif;
+--shadow-light: 0 2px 4px rgba(0, 0, 0, 0.1);
+--shadow-medium: 0 4px 8px rgba(0, 0, 0, 0.1);
+--shadow-heavy: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+body {
+font-family: var(--font-main);
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+line-height: 1.6;
+color: var(--text-dark);
+background-color: var(--bg-light);
+overflow-x: hidden;
+}
+
+.container {
+max-width: 1200px;
+margin: 0 auto;
+padding: 0 20px;
+}
+
+h1, h2, h3 {
+font-weight: bold;
+margin-bottom: 20px;
+color: var(--text-dark);
+}
+
+h1 {
+font-size: 2.8em;
+text-align: center;
+margin-bottom: 10px;
+}
+
+p {
+margin-bottom: 20px;
+}
+
+/* Header Styling (konsisten dengan beranda.css) */
+.header {
+background-color: var(--bg-white);
+box-shadow: var(--shadow-light);
+padding: 10px 0;
+position: sticky;
+top: 0;
+z-index: 1000;
+}
+
+.header .container {
+display: flex; /* Menggunakan flexbox untuk penyejajaran horizontal */
+justify-content: space-between; /* Mendorong elemen ke ujung-ujung */
+align-items: center; /* Menyelaraskan secara vertikal di tengah */
+}
+
+.back-to-projects {
+display: flex;
+align-items: center;
+gap: 8px;
+color: var(--primary-color);
+text-decoration: none;
+font-weight: bold;
+transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.back-to-projects:hover {
+color: var(--secondary-color);
+transform: translateX(-5px);
+}
+
+.back-to-projects i {
+font-size: 1.2em;
+}
+
+/* Penyesuaian untuk main-nav dan tombol autentikasi */
+.main-nav {
+display: flex; /* Mengatur tombol login/profil/logout berdampingan */
+gap: 10px; /* Jarak antara tombol */
+position: relative;
+z-index: 1100;
+align-items: center; /* Pastikan item di dalam nav juga sejajar */
+}
+
+.btn-auth {
+background-color: var(--primary-color);
+color: var(--text-light);
+padding: 8px 15px;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+font-weight: bold;
+transition: background-color 0.3s ease, transform 0.2s ease;
+position: relative;
+z-index: 1200;
+}
+
+.btn-auth:hover {
+background-color: var(--secondary-color);
+transform: translateY(-2px);
+}
+
+.btn-logout {
+background-color: #dc3545; /* Merah untuk logout */
+}
+
+.btn-logout:hover {
+background-color: #c82333;
+}
+
+.btn-delete {
+background-color: #dc3545; /* Merah untuk hapus akun */
+margin-top: 15px; /* Jarak dari tombol lain */
+}
+
+.btn-delete:hover {
+background-color: #c82333;
+}
+
+.btn-cancel {
+background-color: #6c757d; /* Abu-abu untuk batal */
+margin-left: 10px;
+}
+
+.btn-cancel:hover {
+background-color: #5a6268;
+}
+
+/* Gaya untuk tombol profil dengan gambar */
+.profile-btn {
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 5px; /* Padding lebih kecil agar gambar lebih dominan */
+width: 42px; /* Sesuaikan lebar dan tinggi agar berbentuk kotak untuk gambar 32x32px + padding */
+height: 42px;
+border-radius: 50%; /* Membuat tombol lingkaran */
+overflow: hidden; /* Pastikan gambar tidak keluar dari batas lingkaran */
+background-color: var(--primary-color); /* Latar belakang tombol */
+}
+
+.profile-btn:hover {
+background-color: var(--secondary-color);
+transform: none; /* Jangan geser saat hover, fokus pada efek gambar */
+}
+
+.profile-icon {
+width: 32px; /* Ukuran ikon profil */
+height: 32px;
+border-radius: 50%; /* Membuat gambar lingkaran */
+object-fit: cover; /* Memastikan gambar mengisi area tanpa terdistorsi */
+border: 2px solid var(--text-light); /* Border putih tipis di sekitar gambar */
+}
+
+/* Gaya untuk foto profil di dalam modal */
+.profile-photo-lg {
+width: 120px;
+height: 120px;
+border-radius: 50%;
+object-fit: cover;
+margin: 0 auto 20px auto; /* Pusatkan dan berikan jarak bawah */
+display: block; /* Pastikan elemen blok untuk margin auto */
+border: 3px solid var(--primary-color);
+box-shadow: var(--shadow-medium);
+}
+
+.profile-buttons {
+margin-top: 20px;
+display: flex;
+flex-wrap: wrap; /* Izinkan wrap jika terlalu sempit */
+justify-content: center;
+gap: 10px; /* Jarak antar tombol */
+}
+
+/* Section Daftar Produk Toko Online (konten utama) */
+.toko-products-section {
+padding: 80px 0; /* Padding atas dan bawah */
+background-color: var(--bg-light);
+text-align: center; /* Untuk judul dan intro */
+}
+
+.toko-products-section h1 {
+margin-bottom: 20px;
+color: var(--primary-color); /* Warna judul utama */
+}
+
+.product-intro {
+max-width: 800px;
+margin: 0 auto 40px auto;
+font-size: 1.1em;
+color: #555;
+text-align: center;
+}
+
+.product-grid {
+display: grid;
+/* Ubah ini untuk tampilan mirip e-commerce */
+grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Lebih banyak kolom, ukuran lebih kecil */
+gap: 20px; /* Jarak antar kartu */
+margin-top: 40px;
+}
+
+.product-item {
+background-color: var(--bg-white);
+border-radius: 8px; /* Lebih halus */
+box-shadow: var(--shadow-medium); /* Shadow standar */
+overflow: hidden;
+display: flex;
+flex-direction: column;
+text-decoration: none;
+color: var(--text-dark);
+transition: transform 0.2s ease, box-shadow 0.2s ease; /* Transisi lebih cepat */
+border: 1px solid #eee; /* Border halus */
+width: 100%; /* Memastikan item mengisi grid */
+}
+
+.product-item:hover {
+transform: translateY(-5px); /* Efek naik lebih kecil */
+box-shadow: var(--shadow-heavy); /* Bayangan lebih intens saat hover */
+}
+
+.product-item img {
+width: 100%;
+height: 180px; /* Tinggi gambar produk yang proporsional */
+object-fit: cover;
+display: block;
+border-bottom: 1px solid #f0f0f0; /* Border bawah gambar */
+}
+
+.product-info {
+padding: 15px; /* Padding lebih kecil */
+text-align: left;
+flex-grow: 1;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+
+.product-info h3 {
+margin-top: 0;
+margin-bottom: 8px; /* Jarak lebih kecil */
+font-size: 1.2em; /* Ukuran judul produk */
+color: var(--text-dark);
+line-height: 1.3;
+}
+
+.product-description {
+font-size: 0.85em; /* Ukuran deskripsi lebih kecil */
+color: #777;
+margin-bottom: 10px; /* Jarak lebih kecil */
+flex-grow: 1; /* Memungkinkan deskripsi menggunakan ruang yang tersedia */
+}
+
+.product-price {
+font-size: 1.1em; /* Ukuran harga */
+font-weight: bold;
+color: var(--primary-color);
+margin-top: auto; /* Mendorong harga dan tombol ke bawah */
+margin-bottom: 15px; /* Jarak antara harga dan tombol */
+}
+
+.btn-buy {
+display: block;
+background-color: #00AA5B; /* Warna hijau khas Tokopedia */
+color: var(--text-light);
+padding: 10px 15px; /* Padding lebih kecil */
+text-align: center;
+text-decoration: none;
+border-radius: 4px; /* Lebih tajam */
+transition: background-color 0.2s ease, transform 0.1s ease;
+font-weight: bold;
+font-size: 0.95em;
+margin-top: 5px; /* Jarak dari harga */
+border: none;
+cursor: pointer;
+}
+
+.btn-buy:hover {
+background-color: #008F4F; /* Warna hijau lebih gelap saat hover */
+transform: translateY(-1px);
+}
+
+/* Footer Styling (konsisten) */
+.footer {
+background-color: var(--text-dark);
+color: var(--text-light);
+padding: 30px 0;
+text-align: center;
+font-size: 0.9em;
+}
+
+.footer p {
+margin: 0;
+}
+
+/* Animasi untuk elemen yang muncul saat scroll */
+.fade-in-slide-up {
+opacity: 0;
+transform: translateY(30px);
+transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+transition-delay: 0s;
+}
+
+.fade-in-slide-up.is-visible {
+opacity: 1;
+transform: translateY(0);
+}
+
+/* Responsivitas */
+@media (max-width: 768px) {
+h1 {
+font-size: 2.2em;
+}
+
+.toko-products-section {
+padding: 50px 0; /* Sesuaikan padding di mobile */
+}
+
+.product-intro {
+font-size: 1em;
+margin-bottom: 30px;
+}
+
+.back-to-projects {
+font-size: 0.9em;
+}
+
+.back-to-projects i {
+font-size: 1em;
+}
+
+.main-nav {
+gap: 5px; /* Kurangi jarak antar tombol di mobile */
+}
+
+.btn-auth {
+padding: 6px 10px; /* Padding lebih kecil untuk tombol di mobile */
+font-size: 0.9em;
+}
+
+.product-grid {
+/* Untuk mobile, gunakan kolom lebih sedikit atau satu kolom */
+grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); /* 2 kolom di HP */
+gap: 15px; /* Jarak antar kartu lebih kecil di mobile */
+padding: 0 10px; /* Padding horizontal lebih kecil */
+}
+
+.product-item img {
+height: 120px; /* Tinggi gambar lebih kecil di mobile */
+}
+
+.product-info {
+padding: 10px; /* Padding lebih kecil di mobile */
+}
+
+.product-info h3 {
+font-size: 1em;
+margin-bottom: 5px;
+}
+
+.product-description, .product-price {
+font-size: 0.8em;
+margin-bottom: 10px;
+}
+
+.btn-buy {
+font-size: 0.9em;
+padding: 8px 12px;
+}
+
+/* Responsivitas untuk modal di mobile */
+.auth-modal-content {
+width: 90%; /* Pastikan modal mengambil lebih banyak lebar di mobile */
+padding: 20px;
+}
+.auth-modal-content h2 {
+font-size: 1.5em; /* Ukuran judul modal di mobile */
+margin-bottom: 15px;
+}
+.auth-modal-content input,
+.auth-modal-content button[type="submit"] {
+font-size: 0.9em;
+padding: 10px;
+}
+.close-button {
+font-size: 24px;
+top: 8px; /* Sesuaikan posisi X */
+right: 12px;
+width: 28px; /* Lebih besar area sentuh */
+height: 28px;
+line-height: 28px;
+}
+.auth-message {
+font-size: 0.8em;
+margin-top: 10px;
+}
+.auth-switch {
+font-size: 0.8em;
+margin-top: 15px;
+}
+}
