Feat: Make back button responsive (icon only on mobile, text + icon on desktop)

--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -27,6 +27,7 @@
                     stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
                 </svg>
+                <!-- Teks "Kembali ke Proyek" akan tersembunyi di layar kecil (mobile) dan terlihat di layar sm ke atas (desktop) -->
                 <span class="hidden sm:inline">Kembali ke Proyek</span>
             </a>
 
