--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -18,11 +18,11 @@
 <body class="bg-gray-100 flex flex-col min-h-screen font-inter">
     <!-- Header Utama (Mirip dengan Tokopedia) -->
     <header class="bg-white shadow-md py-3 px-4 md:px-8 lg:px-16">
-        <!-- Container utama header: akan menjadi kolom di layar kecil (flex-col) dan baris di layar menengah ke atas (md:flex-row) -->
-        <div class="container mx-auto flex flex-col md:flex-row items-center md:justify-between gap-y-3 md:gap-y-0">
-            <!-- Bagian atas (kiri di desktop): Tombol Kembali, Logo, dan Tombol Auth/Ikon untuk Mobile -->
-            <!-- justify-between akan menyebarkan item di mobile -->
-            <div class="flex items-center justify-between w-full md:w-auto md:order-1">
+        <!-- Container utama header: flex-wrap agar elemen bisa pindah baris di layar kecil -->
+        <div class="container mx-auto flex flex-wrap items-center justify-between">
+            <!-- Baris pertama di mobile: Tombol Kembali + Logo + Tombol Auth/Ikon (mobile & desktop) -->
+            <!-- flex-grow pada search bar akan mendorong auth-buttons ke kanan di desktop -->
+            <div class="flex items-center justify-between w-full md:w-auto md:flex-grow-0 flex-shrink-0">
                 <!-- Tombol Kembali ke Proyek -->
                 <a href="javascript:history.back()" class="flex items-center text-gray-600 hover:text-green-600 font-semibold
                     py-2 px-3 rounded-lg transition duration-300 flex-shrink-0">
@@ -35,7 +35,7 @@
                 </a>
 
                 <!-- Logo "Toko Online" dengan gaya mirip Tokopedia (link dimatikan) -->
-                <!-- mx-auto untuk memusatkan di mobile jika tidak ada elemen lain di sisi, md:mx-0 untuk mereset -->
+                <!-- flex-grow agar mengambil ruang di antara tombol kembali dan auth-buttons di mobile -->
                 <a href="javascript:void(0)"
                     class="text-green-500 font-bold text-xl sm:text-2xl rounded-md flex-shrink-0 logo mx-auto md:mx-0">
                     <span class="bg-green-500 text-white px-2 py-1 rounded-l-md">Toko</span><span
@@ -43,9 +43,9 @@
                 </a>
 
                 <!-- Ikon Navigasi (Keranjang, Notifikasi) dan Kontainer Tombol Auth/Profil -->
-                <!-- Terlihat di mobile (kecuali md:hidden), disembunyikan di desktop -->
-                <div id="auth-buttons-container-mobile"
-                    class="flex items-center space-x-2 sm:space-x-4 flex-shrink-0 md:hidden"
+                <!-- flex-shrink-0 agar tidak menyusut -->
+                <div id="auth-buttons-container"
+                    class="flex items-center space-x-2 sm:space-x-4 flex-shrink-0 nav-icons-auth-container"
                     style="opacity: 0; transition: opacity 0.3s ease;">
                     <a href="#" class="text-gray-600 hover:text-green-600 relative nav-icon">
                         <!-- Ikon keranjang belanja -->
@@ -67,28 +67,29 @@
                     </a>
 
                     <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
-                    <button id="auth-button-login-mobile"
+                    <button id="auth-button-login"
                         class="bg-green-500 text-white py-2 px-3 rounded-lg hover:bg-green-600 transition duration-300 text-sm sm:text-base btn-auth">Login
                         / Daftar</button>
 
                     <!-- Tombol untuk membuka modal profil (visible when logged in) -->
-                    <button id="auth-button-profile-mobile"
+                    <button id="auth-button-profile"
                         class="bg-green-500 p-1 rounded-full hover:bg-green-600 transition duration-300 flex items-center justify-center profile-btn"
                         style="display: none;">
-                        <img id="header-profile-photo-mobile" src="https://placehold.co/32x32/CCCCCC/000000?text=P"
+                        <img id="header-profile-photo" src="https://placehold.co/32x32/CCCCCC/000000?text=P"
                             alt="Foto Profil" class="w-8 h-8 rounded-full object-cover profile-icon">
                     </button>
 
                     <!-- Tombol Logout (visible when logged in) -->
-                    <button id="auth-button-logout-mobile"
+                    <button id="auth-button-logout"
                         class="bg-red-500 text-white py-2 px-3 rounded-lg hover:bg-red-600 transition duration-300 text-sm sm:text-base btn-auth btn-logout"
                         style="display: none;">Logout</button>
                 </div>
             </div>
 
             <!-- Search Bar yang responsif -->
-            <!-- Akan mengambil lebar penuh di mobile (w-full), di tengah di desktop (md:flex-grow md:max-w-xl) -->
-            <div class="w-full relative mt-3 md:mt-0 md:flex-grow md:max-w-xl md:mx-4 md:order-2 search-bar-container">
+            <!-- Akan mengambil lebar penuh di mobile (w-full), dan flex-grow di desktop (md:flex-grow) -->
+            <!-- Tambahkan mt-3 untuk jarak di mobile, md:mt-0 untuk mereset di desktop -->
+            <div class="w-full relative mt-3 md:mt-0 md:flex-grow md:max-w-xl md:mx-4 search-bar-container">
                 <input type="text" placeholder="Cari di Toko Online..."
                     class="w-full pl-4 pr-10 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-400">
                 <button class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
@@ -99,48 +100,6 @@
                             clip-rule="evenodd" />
                     </svg>
                 </button>
-            </div>
-
-            <!-- Ikon Navigasi (Keranjang, Notifikasi) dan Kontainer Tombol Auth/Profil (hanya terlihat di desktop) -->
-            <div id="auth-buttons-container-desktop"
-                class="hidden md:flex items-center space-x-2 sm:space-x-4 flex-shrink-0 nav-icons-auth-container md:order-3"
-                style="opacity: 0; transition: opacity 0.3s ease;">
-                <a href="#" class="text-gray-600 hover:text-green-600 relative nav-icon">
-                    <!-- Ikon keranjang belanja -->
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-                    </svg>
-                    <span
-                        class="absolute -top-1 -right-1 bg-red-500 text-white text-xs px-1.5 py-0.5 rounded-full badge">3</span>
-                </a>
-                <a href="#" class="text-gray-600 hover:text-green-600 nav-icon">
-                    <!-- Ikon notifikasi -->
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-                    </svg>
-                </a>
-
-                <!-- Tombol untuk membuka modal login/daftar (visible when logged out) -->
-                <button id="auth-button-login-desktop"
-                    class="bg-green-500 text-white py-2 px-3 rounded-lg hover:bg-green-600 transition duration-300 text-sm sm:text-base btn-auth">Login
-                    / Daftar</button>
-
-                <!-- Tombol untuk membuka modal profil (visible when logged in) -->
-                <button id="auth-button-profile-desktop"
-                    class="bg-green-500 p-1 rounded-full hover:bg-green-600 transition duration-300 flex items-center justify-center profile-btn"
-                    style="display: none;">
-                    <img id="header-profile-photo-desktop" src="https://placehold.co/32x32/CCCCCC/000000?text=P"
-                        alt="Foto Profil" class="w-8 h-8 rounded-full object-cover profile-icon">
-                </button>
-
-                <!-- Tombol Logout (visible when logged in) -->
-                <button id="auth-button-logout-desktop"
-                    class="bg-red-500 text-white py-2 px-3 rounded-lg hover:bg-red-600 transition duration-300 text-sm sm:text-base btn-auth btn-logout"
-                    style="display: none;">Logout</button>
             </div>
         </div>
     </header>
